Fix image styling to ensure it never overlaps container

--- a/src/components/AlbumItem.css
+++ b/src/components/AlbumItem.css
@@ -7,6 +7,10 @@
 
 }
 
+.album-item-image {
+  max-width: 95%;
+}
+
 .album-item-title {
   max-width: 95%;
 }
